--- a/src/style/question.css
+++ b/src/style/question.css
@@ -29,11 +29,11 @@
 }
 
 .question__pending input:focus {border-bottom-color: dodgerblue;}
-.question__success input:focus {border-bottom-color: #50C878;}
+.question__correct input:focus {border-bottom-color: #50C878;}
 .question__wrong   input:focus {border-bottom-color: #EA3C53;}
 
 .question__pending input {color: dodgerblue;}
-.question__success input {color: #50C878;}
+.question__correct input {color: #50C878;}
 .question__wrong   input {color: #EA3C53;}
 
 
