--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,35 +1,151 @@
 /* ==========================================================================
    General styles
    ========================================================================== */
-body {
-  color: #333;
+*{
+  box-sizing: border-box;
+}
+
+
+body, html {
+  margin: 0; padding: 0;
+
   font-family: 'Lato', sans-serif;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #333;
+}
+
+h1, h2, h3 {
+  margin: 0;
+
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
 }
 
-input {
-  font-family: 'Lato', sans-serif;
-  font-size: inherit;
-  color: dodgerblue;
+h1 {
+  font-size: 2.8rem;
 }
 
+h2 {
+  font-size: 1.8rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+p{
+  line-height: 1.3;
+  text-align: center;
+}
+
+a{
+  color: #333;
+  transition: color 0.2s;
+}
+
+a:hover{
+  color: #c20000;
+}
+
+
+/* ==========================================================================
+   Main wrapper
+   ========================================================================== */
+main {
+}
+
+/* ==========================================================================
+   Page takes almost whole height. Leave 10% to show that there is more
+   ========================================================================== */
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  height: 100vh;
+
+  position: relative;
+  overflow: hidden;
+}
+
+.page .page__header,
+.page .page__content {
+  width: 100%;
+  max-width: 800px;
+
+  padding: 2em;
+  margin: 0 auto;
+
+  text-align: center;
+}
+
+.page .page__header {
+
+}
+
+.page .page__content {
+
+}
+
+/* First page */
+.page.page--main {
+  /*background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.8)), url("../img/bg3.jpg");*/
+  background-size: cover;
+}
+
+
+
+
+
+/* ==========================================================================
+   Form elements
+   ========================================================================== */
+
+/* Text Input
+   ========================================================================== */
+input {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #333;
+
+  font-family: 'Lato', sans-serif;
+  font-size: inherit;
+  color: #c20000;
+  text-align: center;
+}
+
+input:focus {
+  outline: none;
+  border-bottom-color: #c20000;
+}
+
+
+/* Just a simple button
+   ========================================================================== */
 button {
   position: relative;
+
   display: inline-block;
   margin: 0;
   padding: 12px;
 
   border-color: transparent;
-  background-color: dodgerblue;
   border-width: 1px;
   border-style: solid;
   border-radius: 4px;
+
+  background-color: #c20000;
 
   color: #fff;
   text-align: center;
   font-size: 14px;
   font-weight: 300;
+}
+
+button:focus {
+  outline: none;
 }
 
 button:not([disabled]):hover {
@@ -44,10 +160,18 @@ button[hidden] {
   display: none;
 }
 
-main {
-  max-width: 800px;
-  margin: 3rem auto;
 
-  text-align: center;
+
+
+
+/* Select preposition
+   ========================================================================== */
+.preposition {
+  color: #c20000;
+  font-weight: 400;
 }
+
+
+
+
 
