--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,51 +52,7 @@ a:hover{
 /* ==========================================================================
    Main wrapper
    ========================================================================== */
-main {
-}
-
-/* ==========================================================================
-   Page takes almost whole height. Leave 10% to show that there is more
-   ========================================================================== */
-.page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  height: 100vh;
-
-  position: relative;
-  overflow: hidden;
-}
-
-.page .page__header,
-.page .page__content {
-  width: 100%;
-  max-width: 800px;
-
-  padding: 2em;
-  margin: 0 auto;
-
-  text-align: center;
-}
-
-.page .page__header {
-
-}
-
-.page .page__content {
-
-}
-
-/* First page */
-.page.page--main {
-  /*background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.8)), url("../img/bg3.jpg");*/
-  background-size: cover;
-}
-
-
-
+main {  }
 
 
 /* ==========================================================================
@@ -159,19 +115,4 @@ button[disabled] {
 button[hidden] {
   display: none;
 }
-
-
-
-
-
-/* Select preposition
-   ========================================================================== */
-.preposition {
-  color: #c20000;
-  font-weight: 400;
-}
-
-
-
-
 
